feat: changed accessToken to JWT based
