# apps/api/src/modules/auth/auth.controller.ts
@@ -2,11 +2,15 @@ import { Controller, Get, Redirect } from '@nestjs/common';
 import { ApiBearerAuth, ApiTags } from '@nestjs/swagger';
 import { docTags } from '../../constants/api-tags';
 import { User } from '../user/user.entity';
+import { AuthService } from './auth.service';
 import { CurrentUser, Protect } from './decorators';
+import { AuthPayload } from './token/token.strategy';
 
 @ApiTags(docTags.auth.name)
 @Controller('auth')
 export class AuthController {
+  constructor(private readonly authService: AuthService) {}
+
   @Get('login')
   @Redirect('/auth/google')
   login() {
@@ -18,5 +22,13 @@ export class AuthController {
   @Get('profile')
   getProfile(@CurrentUser() user: User) {
     return { message: 'Profile found', profile: user };
+  }
+
+  @Get('generate-token')
+  @ApiBearerAuth()
+  @Protect()
+  async generateToken(@CurrentUser() user: AuthPayload) {
+    const token = await this.authService.generateTokenForCli(user as User);
+    return { message: 'Token generated successfully', result: token };
   }
 }
