# apps/api/src/modules/user/user.controller.ts
@@ -1,6 +1,5 @@
-import { Controller, Get, NotFoundException, Param } from '@nestjs/common';
+import { Controller, Get, HttpStatus, Redirect } from '@nestjs/common';
 import { ApiBearerAuth, ApiTags } from '@nestjs/swagger';
-import { ObjectId } from 'mongodb';
 import { docTags } from '../../constants/api-tags';
 import { Protect } from '../auth/decorators';
 import { UserService } from './user.service';
@@ -10,18 +9,11 @@ import { UserService } from './user.service';
 export class UserController {
   constructor(private readonly userService: UserService) {}
 
-  @Get(':id')
-  async findOne(@Param('id') id: string) {
-    const user = await this.userService.findById(ObjectId(id));
-    if (!user) throw new NotFoundException({ message: 'User not found' });
-    return { message: 'User found', result: user };
-  }
-
-  @Get('generate-token/:id')
   @ApiBearerAuth()
   @Protect()
-  async generateToken(@Param('id') id: string) {
-    const token = await this.userService.generateToken(ObjectId(id));
-    return { message: 'Token generated successfully', result: token };
+  @Get('/generate-token')
+  @Redirect('/auth/generate-token', HttpStatus.MOVED_PERMANENTLY)
+  redirect() {
+    //
   }
 }
